--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,19 +15,19 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Login to Docker Hub
-      run: echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u gfabianmm --password-stdin
+      run: echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u wechavez14 --password-stdin
 
     - name: Build and Push Backend Image
       run: |
         IMAGE_TAG=$(date '+%Y%m%d%H%M%S')
-        docker build -t gfabianmm/ama:backend-latest -t gfabianmm/ama:backend-$IMAGE_TAG -f src/Backend/src/FundacionAMA.API/Dockerfile .
-        docker push gfabianmm/ama:backend-latest
-        docker push gfabianmm/ama:backend-$IMAGE_TAG
+        docker build -t wechavez14/platform-ama:backend-latest -t wechavez14/platform-ama:backend-$IMAGE_TAG -f src/Backend/src/FundacionAMA.API/Dockerfile . --platform linux/amd64
+        docker push wechavez14/platform-ama:backend-latest
+        docker push wechavez14/platform-ama:backend-$IMAGE_TAG
         
 
     - name: Build and Push Frontend Image
       run: |
         IMAGE_TAG=$(date '+%Y%m%d%H%M%S')
-        docker build -t gfabianmm/ama:frontend-latest -t gfabianmm/ama:frontend-$IMAGE_TAG -f src/Frontend/Dockerfile.frontend .
-        docker push gfabianmm/ama:frontend-latest
-        docker push gfabianmm/ama:frontend-$IMAGE_TAG
+        docker build -t wechavez14/platform-ama:frontend-latest -t wechavez14/platform-ama:frontend-$IMAGE_TAG -f src/Frontend/Dockerfile.frontend .
+        docker push wechavez14/platform-ama:frontend-latest
+        docker push wechavez14/platform-ama:frontend-$IMAGE_TAG
