--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -18,7 +18,7 @@ services:
       - my-network
 
   backend:
-    image: gfabianmm/ama:backend-latest
+    image: wechavez14/platform-ama:backend-latest
     container_name: back
     restart: always
     environment:
@@ -31,7 +31,7 @@ services:
       - my-network
  
   frontend:
-    image: gfabianmm/ama:frontend-latest
+    image: wechavez14/platform-ama:frontend-latest
     container_name: front
     restart: always
     ports:
