--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - database
     networks:
       - my-network
+    platform: linux/amd64
  
   frontend:
     container_name: front
@@ -42,6 +43,7 @@ services:
       - '4200:80'
     networks:
       - my-network 
+    platform: linux/amd64
 
 networks:
   my-network:
