--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     image: mariadb
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: AMA
-      MYSQL_USER: ama
-      MYSQL_PASSWORD: ama
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - 3306:3306
     networks:
@@ -20,11 +20,8 @@ services:
     build:
       context: .
       dockerfile: src/Backend/src/FundacionAMA.API/Dockerfile
-    #image: gfabianmm/ama:backend-latest
     environment:  
-      - ASPNETCORE_ENVIRONMENT=Development
-      # - ASPNETCORE_URLS=http://+:7130
-      # - DATABASE_HOST=database  # Asegúrate de usar este host en tu aplicación backend
+      ASPNETCORE_ENVIRONMENT: Development
     ports:
       - '7130:7130'
     depends_on:
@@ -38,7 +35,6 @@ services:
     build:
       context: .
       dockerfile: src/Frontend/Dockerfile.frontend
-    #image: gfabianmm/ama:frontend-latest
     ports:
       - '4200:80'
     networks:
